test/parser/should_succeed/while6.souc
main() = do
    while true do
        print "sub call"
        explode
    while false 
        explode
    end while
end main
