test/parser/should_fail/main2.souc
main() = do
	explode "this is very bad"
		end main
